--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,6 +5,7 @@
     <th>区分</th>
     <th>科目</th>
     <th>金額</th>
+    <th>詳細</th>
 </tr>
 
 <% @books.each do |book| %>
@@ -17,6 +18,7 @@ end
     %></td>
     <td><%= book.category %></td>
     <td><%= book.amount %>万円</td>
+    <td><%= link_to "詳細", book_path(book), class: "btn btn-info" %></td>
 </tr>
 
 <% end %>
