--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,6 +9,7 @@
     <th>科目</th>
     <th>金額</th>
     <th>詳細</th>
+    <th>編集</th>
 </tr>
 
 <% @books.each do |book| %>
@@ -22,6 +23,7 @@ end
     <td><%= book.category %></td>
     <td><%= book.amount %>万円</td>
     <td><%= link_to "詳細", book_path(book), class: "btn btn-info" %></td>
+    <td><%= link_to "編集", edit_book_path(book), class: "btn btn-warning" %></td>
 </tr>
 
 <% end %>
