--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,6 +10,7 @@
     <th>金額</th>
     <th>詳細</th>
     <th>編集</th>
+    <th>削除</th>
 </tr>
 
 <% @books.each do |book| %>
@@ -24,6 +25,7 @@ end
     <td><%= book.amount %>万円</td>
     <td><%= link_to "詳細", book_path(book), class: "btn btn-info" %></td>
     <td><%= link_to "編集", edit_book_path(book), class: "btn btn-warning" %></td>
+    <td><%= link_to "削除", book_path(book), method: "delete", data: {confirm: "本当に削除しますか？"}, class: "btn btn-danger" %></td>
 </tr>
 
 <% end %>
