--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,17 @@
     <%=javascript_include_tag 'application','data-turbolinks-track':'reload'%>
   </head>
 <body>
+      <% if flash[:notice] %>
+        <div class="alert alert-success" role="alert" >
+          <%= flash[:notice] %>
+        </div>
+      <%end%>
+      <% if flash[:alert] %>
+        <div class="alert alert-danger" role="alert" >
+          <%= flash[:alert] %>
+        </div>
+      <%end%>
+      
       <%=yield%>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
