--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,23 @@
 <h1> 家計簿 </h1>
 
+<div class = "card" >
+    <div class="card-body">
+        <%= form_with method: "get", local: true do |f| %>
+        <div class "form-row" >
+            <div class="col" >
+                <%= f.number_field "year", placeholder: "年度", class: "form-control" %>
+            </div>
+            <div class="col">
+                <%= f.number_field "month", placeholder: "月", class: "form-control" %>
+            </div>
+            <div class="col">
+                <%= f.submit "検索", class: "btn btn-primary" %>
+            </div>
+        </div>
+        <% end %>
+    </div>
+</div>
+
 <%= link_to "新規登録", new_book_path, class: "btn btn-success"  %>
 
 <table class="table table-striped">
@@ -12,6 +30,8 @@
     <th>編集</th>
     <th>削除</th>
 </tr>
+
+<% sum = 0 %>
 
 <% @books.each do |book| %>
 <tr>
@@ -28,6 +48,26 @@ end
     <td><%= link_to "削除", book_path(book), method: "delete", data: {confirm: "本当に削除しますか？"}, class: "btn btn-danger" %></td>
 </tr>
 
+<% if book.inout == 1 %>
+ <% sum += book.amount %>
+<% else %>
+<% sum -= book.amount %>
 <% end %>
+<% end %>
+
+<tr>
+    <td></td>
+    <td></td>
+    <td>合計</td>
+    <td><%= sum %>万円</td>
+    <td><%= if sum >0 
+    "黒字"
+    elsif sum < 0 
+        "赤字"
+    else
+        "トントン"
+    end
+    %></td>
+</tr>
 
 </table>
