--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,4 +1,5 @@
-<%=form_with model: book, local: true, method; method do |f| %>
+<h1><%= type %></h1>
+<%=form_with model: book, local: true, method: method do |f| %>
 <div class = "form-group">
     <label>年度</label>
     <%= f.number_field :year, class: "form-control" %>
