--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,1 +1,1 @@
-<% render partial: "form", locals: {type: "新規登録", book: @book, method: nil} %>
+<%= render partial: "form", locals: {type: "新規登録", book: @book, method: nil} %>
